Fixing a bug that rendered comment invisible

--- a/comments/static/comments/css/comments.scss
+++ b/comments/static/comments/css/comments.scss
@@ -56,6 +56,7 @@
     display: flex;
     margin-top: 0px;
     margin-bottom: 10px;
+    clear: both;
 }
 
 .comment-reply-form-box .profile-thumbnail-img {
